--- a/sass/org/_elements.scss
+++ b/sass/org/_elements.scss
@@ -140,20 +140,20 @@
 }
 
 /*--------------------------------------------------------------
-## Rank
+## Rank / Suggestion / Futerd
 --------------------------------------------------------------*/
-.vrn{
+.vrn,.sug,.ftd{
 	text-decoration:none;
 	margin: 1.5625vw 0;
 	display:block;
 	
-	.vrn-bg{
+	.vrn-bg,.sug-bg,.ftd-bg{
 		object-fit:cover;
 		object-position: center;
 		pointer-events: none;
 	}
 	
-	.vrn-text{
+	.vrn-text,.sug-text,.ftd-text{
 		
 		pointer-events: none;
 	
@@ -162,7 +162,7 @@
 		min-height:70px;
 		padding: 1%;
 		
-		.vrnt-num{
+		.vrnt-num,sugt-icon,.ftdt-icon{
 			font-size: 1.6em;
 			line-height: 1;
 			width:8%;
@@ -174,7 +174,7 @@
 			filter: drop-shadow(1px 1px 1px $cla-d10); 
 		}
 		
-		.vrnt-title{
+		.vrnt-title,.sugt-title,.ftdt-title{
 			width:90%;
 			display:flex;
 			flex-direction: column;
@@ -188,11 +188,22 @@
 				width:25%;
 				text-align:center;
 			}
-			h2{
-				font-size:1em;
+			.vrnt-h2,.sugt-p,.ftdt-p{
 				color: $clb-g10;
 				text-shadow:0 0 2px $cla-d10;
+				font-size:1em;
+				margin:0;
 			}
+		}
+	}
+	.sug-text,.ftd-text{
+		.sugt-icon,.ftdt-icon{
+			font-size:1.8rem;
+			margin: 0 0 0 -0.1em;
+			
+		}
+		.sugt-p,.ftdt-p{
+			line-height:1;
 		}
 	}
 	
@@ -251,12 +262,12 @@
 	}
 	
 }
-.vrn{
+.vrn,.sug,.ftd{
 	
 	position:relative;
 	height:100px;
 	
-	.vrn-bg{
+	.vrn-bg,.sug-bg,.ftd-bg{
 		position:absolute;
 		top:0;
 		left:0;
@@ -264,7 +275,7 @@
 		height:100%;
 		filter:sepia(40%)  hue-rotate(-16deg) contrast(80%) brightness(80%);
 	}
-	.vrn-text{
+	.vrn-text,.sug-text,.ftd-text{
 		
 		position:absolute;
 		bottom:0;
@@ -273,23 +284,44 @@
 		height:100%;
 	}
 }
-.vrn:hover{
+.vrn:hover,.sug:hover,.ftd:hover{
 	
 	position:relative;
 	height:200px;
 	
-	.vrn-bg{
+	.vrn-bg,.sug-bg,.ftd-bg{
 		position:static;
 		height:100%;
 		filter:none;
 	}
-	.vrn-text{
+	.vrn-text,.sug-text,.ftd-text{
 		--c: rgba(183, 82, 10, 0.0);
 		position:absolute;
 		bottom:0;
 		height:50%;
 	}
 }
+
+@include mq(xl) {
+	.sgt-area,.ftd-area{
+		display:flex;
+		flex-direction:row;
+		align-content: space-between;
+		.sgta-post,.ftda-post{
+			width:48%;
+		}
+	}
+}
+@include mq(tb) {
+	.sgt-area,.ftd-area{
+		display:flex;
+		flex-direction:column;
+		.sgta-post,.ftda-post{
+			width:100%;
+		}
+	}
+}
+
 /*--------------------------------------------------------------
 ## パンくず
 --------------------------------------------------------------*/
