--- a/style.css
+++ b/style.css
@@ -1046,7 +1046,8 @@ h1 {
   flex-direction: column;
   align-items: flex-end; }
   .single .s-firstview .sf-img {
-    height: auto; }
+    height: auto;
+    width: 100%; }
   .single .s-firstview .sf-title {
     max-width: 90%;
     margin: -30px 1.5625vw 0 1.5625vw;
@@ -1430,15 +1431,20 @@ h1 {
   margin-left: calc( 100% - 90% - 3.125vw);
   display: flex; }
   #breadcrumb .bc-ele {
-    margin-right: 1em;
-    max-width: 50%; }
+    margin-right: 1em; }
+    @media screen and (max-width: 2400px) {
+      #breadcrumb .bc-ele {
+        max-width: 50%; } }
+    @media screen and (max-width: 800px) {
+      #breadcrumb .bc-ele {
+        max-width: 27%; } }
     #breadcrumb .bc-ele .bce-arrow {
       height: 24px;
       display: inline-block;
       position: relative;
       background-color: #887b6b;
       margin: 0 -20px 0 24px;
-      padding: 0 5px;
+      padding: 0 2px;
       z-index: 1;
       color: #fdfffd;
       text-decoration: none;
@@ -1448,7 +1454,9 @@ h1 {
         white-space: nowrap;
         text-overflow: ellipsis;
         width: 100%;
-        display: inline-block; }
+        display: inline-block;
+        font-size: 0.8rem;
+        line-height: 1; }
       #breadcrumb .bc-ele .bce-arrow::before, #breadcrumb .bc-ele .bce-arrow::after {
         content: '';
         position: absolute;
